# ChangeLog for eclass directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.976 2013/09/18 13:39:36 pinkbyte Exp $

  18 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> leechcraft.eclass:
  Add official mirror to LeechCraft SRC_URI, thanks to 0xd34df00d

  18 Sep 2013; Michał Górny <mgorny@gentoo.org> multibuild.eclass:
  Fix coreutils dep to be build-time.

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Fix missing variable replacement in _python_ln_rel.

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Use einstalldocs.

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Rename variables in _python_ln_rel to make it less confusing.

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass,
  python-r1.eclass, python-single-r1.eclass, python-utils-r1.eclass:
  Support python-exec:2.

  17 Sep 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  multilib-build.eclass:
  Add eclass doc for multilib_build_binaries

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass,
  tests/python-utils-r1.sh:
  Introduce PYTHON_SCRIPTDIR for python-exec:2 script location.

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass,
  python-r1.eclass, python-utils-r1.eclass:
  Clean up Python script install/wrapping functions.

  17 Sep 2013; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  multilib-build.eclass:
  Add multilib_build_binaries function to multilib-build eclass

  16 Sep 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Deprecate python_get_PYTHON and python_get_EPYTHON.

  15 Sep 2013; Pacho Ramos <pacho@gentoo.org> gnome2-utils.eclass:
  Support gtk+-2.24.20 query immodules (#476100)

  14 Sep 2013; Michał Górny <mgorny@gentoo.org> eutils.eclass:
  Support EAPIs < 4 in einstalldocs properly.

  13 Sep 2013; Michał Górny <mgorny@gentoo.org> git-r3.eclass: